demo.gateway.deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-gateway
  namespace: default
  labels:
    app: demo-gateway
spec:
  ports:
    - port: 8084
      name: tcp
  selector:
    app: demo-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-gateway
  namespace: default
spec:
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  replicas: 1
  selector:
    matchLabels:
      app: demo-gateway
  template:
    metadata:
      labels:
        app: demo-gateway
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - app-gateway # 反亲和，尽量让gateway分散到不同的节点上
              weight: 1
      containers:
        - name: demo-gateway
          image: freemanliu/demo-gateway:v1.1.0
          imagePullPolicy: Always
          lifecycle:
            preStop:
              httpGet:
                port: 8084
                path: /spring/shutdown
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            periodSeconds: 5
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            periodSeconds: 5
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8084
