nacos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  labels:
    app: nacos-headless
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
spec:
  selector:
    matchLabels:
      app: nacos
  serviceName: nacos-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos-headless
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8snacos
          imagePullPolicy: Always
          image: nacos/nacos-server:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client
          env:InstanceRegistry
            - name: MYSQL_SLAVE_SERVICE_HOST
              value: "192.168.0.204"
            - name: SPRING_DATASOURCE_PLATFORM
              value: mysql
            - name: NACOS_REPLICAS
              value: "3"
            - name: MYSQL_MASTER_SERVICE_HOST
              value: "192.168.0.204"
            - name: MYSQL_MASTER_SERVICE_DB_NAME
              value: "nacos"
            - name: MYSQL_MASTER_SERVICE_PORT
              value: "3306"
            - name: MYSQL_MASTER_SERVICE_USER
              value: "root"
            - name: MYSQL_MASTER_SERVICE_PASSWORD
              value: "123456"
            - name: NACOS_SERVER_PORT
              value: "8848"
            - name: PREFER_HOST_MODE
              value: "hostname"
            - name: NACOS_SERVERS
              value: "nacos-0.nacos-headless.default.svc.cluster.local:8848 nacos-1.nacos-headless.default.svc.cluster.local:8848 nacos-2.nacos-headless.default.svc.cluster.local:8848"

# CREATE DATABASE IF NOT EXISTS nacos DEFAULT CHARSET utf8mb4 COLLATE utf8mb4_general_ci;
