demo.gateway.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - gateway.qingmu.io
      # 这里需要和我们上面的一致
      secretName: qingmu-secret
  rules:
    - host: gateway.qingmu.io
      http:
        paths:
          - backend:
              serviceName: demo-gateway
              servicePort: 8084
